# spotter-ai-assessment-backend

./: build.sh  main.py  pyproject.toml
journey/: settings.py  urls.py
shared/: apps.py  constants.py
shared/repositories/: base.py
shared/serializers/: directions.py  open_route_directions.py  open_route_geocode.py
shared/services/: base.py  base_maps.py  open_route_maps.py
shared/utils/: exception_handler.py
shared/views/: base.py
trips/: models.py  urls.py  views.py
trips/migrations/: 0001_initial.py  0002_tripdetailsmodel.py  0003_tripdetailsmodel_dropoff_tripdetailsmodel_origin_and_more.py
trips/repositories/: trips.py
trips/serializers/: trip_plan.py  trips.py
trips/services/: trip_details.py  trips.py
