[project]
name = "spotter-assessment-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djantic>=0.7.0",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "uvicorn-worker>=0.4.0",
]
